# portfolio-backend

./: .env.example  .env.local  .env.test  .gitignore  CHANGELOG.md  Dockerfile_develop  LICENSE  README.md  _version.py  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml  lint.yml  test.yml
apps/education/: admin.py  apps.py  models.py  openapi.py  serializers.py  tags.py  urls.py  views.py
apps/education/migrations/: 0001_initial.py  0002_educationplacemodel_alter_educationmodel_options_and_more.py
apps/education/tests/: test_http_list_education.py
apps/publications/: admin.py  defs.py  models.py  openapi.py  serializers.py  tags.py  urls.py  views.py
apps/publications/migrations/: 0001_initial.py
apps/publications/tests/: test_http_get_publications.py
core/: settings.py  urls.py
